--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <meta name="author" content="Iker Fortes" >
-    <meta
-      name="description"
-      content="VendemosTuCoche - Compra y venta de vehículos de forma rápida, segura y transparente."
-    >
+    <meta name="description" content="VendemosTuCoche - Compra y venta de vehículos de forma rápida, segura y transparente.">
+
     <!-- Estilos e impresión -->
     <title>VendemosTuCoche</title>
+
     <!-- EL ICONO NO FUNCIONA CON LA EXTENSIÓN LIVE-SERVER -->
     <link rel="icon" href="./images/empresa/favicon.ico" type="image/x-icon" >
     <link rel="stylesheet" href="css/print.css" media="print" >
@@ -25,17 +24,13 @@
       <a href="./index.html">
         <div id="contenedor-logo">
           <img
-            src="./images/empresa/logo.png"
-            alt="Logo"
-            width="100"
-            id="logo"
-          >
+            src="./images/empresa/logo.png" alt="Logo_empresa"  width="100" id="logo">
         </div>
       </a>
 
       <!-- Checkbox + label para menú móvil (checkbox-hack) -->
-      <input type="checkbox" id="menu-toggle" aria-label="Abrir menú" >
-      <label for="menu-toggle" class="hamburger" aria-hidden="true">
+      <input type="checkbox" id="menu-toggle" aria-label="Abrir menú" title="Menu">
+      <label for="menu-toggle" class="hamburger">
         <span></span><span></span><span></span>
       </label>
 
@@ -48,10 +43,10 @@
         </ul>
       </nav>
       <div id="usuario">
-        <a href="./mantenimiento.html" class="link"
-          ><img src="./images/usuarios/Login.png" alt="imgLogin" class="perfil"
-        ></a>
-        <a href="./mantenimiento.html" class="link">INICIAR SESIÓN</a>
+        <a href="./login.html" class="link">
+          <img src="./images/usuarios/Login.png" alt="imgLogin" class="perfil">
+        </a>
+        <a href="login" class="link">INICIAR SESIÓN</a>
       </div>
     </header>
     <!-- 🌟 Sección principal o “hero” -->
@@ -103,12 +98,7 @@
       <div class="servicios-container">
         <div class="servicio cristal-empañado">
           <div class="servicio-header">
-            <img
-              src="./images/empresa/vender.png"
-              alt="logo"
-              width="60"
-              height="60"
-            >
+            <img src="./images/empresa/vender.png" alt="imagen_vender" width="60" height="60">
             <div>
               <h3>Vende tu coche rápido y sin estrés</h3>
               <p>Publica tu coche de forma rápida, sencilla y 100% segura.</p>
@@ -121,7 +111,7 @@
             <li>Venta rápida con ofertas de concesionarios certificados.</li>
           </ul>
           <div class="botones">
-            <a href="./mantenimiento.html" class="btn">Publicar mi coche</a>
+            <a href="publicarMiCoche" class="btn">Publicar mi coche</a>
             <a href="./servicios.html#VendeTuCoche" class="btn info"
               >Más información</a
             >
@@ -130,12 +120,7 @@
 
         <div class="servicio cristal-empañado">
           <div class="servicio-header">
-            <img
-              src="./images/empresa/confianza.png"
-              alt="logo"
-              width="60"
-              height="60"
-            >
+            <img src="./images/empresa/confianza.png" alt="imagen_confianza" width="60" height="60">
             <div>
               <h3>Compra con Confianza</h3>
               <p>
@@ -153,8 +138,8 @@
             <li>Garantía de hasta 12 meses.</li>
           </ul>
           <div class="botones">
-            <a href="./mantenimiento.html" class="btn">Ver coches disponibles</a>
-            <a href="./mantenimiento.html" class="btn info">Solicitar financiación</a>
+            <a href="cochesDisponibles" class="btn">Ver coches disponibles</a>
+            <a href="solicitarFinanciacion" class="btn info">Solicitar financiación</a>
           </div>
         </div>
       </div>
@@ -172,11 +157,7 @@
         <div class="auto-marquee__track">
           <article class="testimonio">
             <div class="contenedor-perfil">
-              <img
-                class="perfil"
-                src="./images/usuarios/Munia.png"
-                alt="cliente"
-              >
+              <img class="perfil" src="./images/usuarios/Munia.png" alt="munia">
 
               <h2 class="autor">
                 Munia Z. <br>
@@ -198,11 +179,7 @@
 
           <article title="Usuario" class="testimonio">
             <div class="contenedor-perfil">
-              <img
-                class="perfil"
-                src="./images/usuarios/Antonio.png"
-                alt="cliente"
-              >
+              <img class="perfil" src="./images/usuarios/Antonio.png" alt="Antonio">
               <h2 class="autor">
                 Antonio L. <br >
                 <span class="azul-claro">COMPRADOR</span>
@@ -224,11 +201,7 @@
 
           <article title="Usuario" class="testimonio">
             <div class="contenedor-perfil">
-              <img
-                class="perfil"
-                src="./images/usuarios/Laia.png"
-                alt="cliente"
-              >
+              <img class="perfil" src="./images/usuarios/Laia.png" alt="laia">
               <h2 class="autor">
                 Laia O. <br >
                 <span class="azul-claro">VENDEDORA</span>
@@ -250,11 +223,7 @@
 
           <article title="Usuario" class="testimonio">
             <div class="contenedor-perfil">
-              <img
-                class="perfil"
-                src="./images/usuarios/Oihan.png"
-                alt="cliente"
-              >
+              <img class="perfil" src="./images/usuarios/Oihan.png" alt="oihan1">
               <h2 class="autor">
                 Oihan A. <br >
                 <span class="azul-claro">COMPRADOR</span>
@@ -275,11 +244,7 @@
 
           <article title="Usuario" class="testimonio">
             <div class="contenedor-perfil">
-              <img
-                class="perfil"
-                src="./images/usuarios/Laura.png"
-                alt="cliente"
-              >
+              <img class="perfil" src="./images/usuarios/Laura.png" alt="laura">
               <h2 class="autor">
                 Laura V.<br >
                 <span class="azul-claro">TALLER ASOCIADO</span>
@@ -300,11 +265,7 @@
 
           <article title="Usuario" class="testimonio">
             <div class="contenedor-perfil">
-              <img
-                class="perfil"
-                src="./images/usuarios/Aretx.png"
-                alt="cliente"
-              >
+              <img class="perfil" src="./images/usuarios/Aretx.png" alt="aretx">
               <h2 class="autor">
                 Aretx A. <br>
                 <span class="azul-claro">COMPRADOR</span>
@@ -327,11 +288,7 @@
         <div class="auto-marquee__track">
           <article title="Usuario" class="testimonio">
             <div class="contenedor-perfil">
-              <img
-                class="perfil"
-                src="./images/usuarios/Munia.png"
-                alt="cliente"
-              >
+              <img class="perfil" src="./images/usuarios/Munia.png" alt="munia2">
               <h2 class="autor">
                 Munia Z. <br >
                 <span class="azul-claro">CLIENTA</span>
@@ -352,11 +309,7 @@
 
           <article title="Usuario" class="testimonio">
             <div class="contenedor-perfil">
-              <img
-                class="perfil"
-                src="./images/usuarios/Antonio.png"
-                alt="cliente"
-              >
+              <img class="perfil" src="./images/usuarios/Antonio.png" alt="antonio2">
               <h2 class="autor">
                 Antonio L. <br >
                 <span class="azul-claro">COMPRADOR</span>
@@ -378,11 +331,7 @@
 
           <article title="Usuario" class="testimonio">
             <div class="contenedor-perfil">
-              <img
-                class="perfil"
-                src="./images/usuarios/Laia.png"
-                alt="cliente"
-              >
+              <img class="perfil" src="./images/usuarios/Laia.png" alt="laia2">
               <h2 class="autor">
                 Laia O. <br >
                 <span class="azul-claro">VENDEDORA</span>
@@ -404,11 +353,7 @@
 
           <article title="Usuario" class="testimonio">
             <div class="contenedor-perfil">
-              <img
-                class="perfil"
-                src="./images/usuarios/Oihan.png"
-                alt="cliente"
-              >
+              <img class="perfil" src="./images/usuarios/Oihan.png" alt="oihan2">
               <h2 class="autor">
                 Oihan A. <br >
                 <span class="azul-claro">COMPRADOR</span>
@@ -429,11 +374,7 @@
 
           <article title="Usuario" class="testimonio">
             <div class="contenedor-perfil">
-              <img
-                class="perfil"
-                src="./images/usuarios/Laura.png"
-                alt="cliente"
-              >
+              <img class="perfil" src="./images/usuarios/Laura.png" alt="laia2">
               <h2 class="autor">
                 Laura V.<br >
                 <span class="azul-claro">TALLER ASOCIADO</span>
@@ -454,11 +395,7 @@
 
           <article title="Usuario" class="testimonio">
             <div class="contenedor-perfil">
-              <img
-                class="perfil"
-                src="./images/usuarios/Aretx.png"
-                alt="cliente"
-              >
+              <img class="perfil" src="./images/usuarios/Aretx.png" alt="aretx2">
               <h2 class="autor">
                 Aretx A. <br >
                 <span class="azul-claro">COMPRADOR</span>
@@ -508,38 +445,22 @@
         <!-- Redes sociales -->
         <section title="Redes Sociales" class="footer-redes">
           <h2>Nuestras Redes sociales</h2>
-          <a
-            href="https://www.facebook.com/VendemosTuCoche"
-            target="_blank"
-            aria-label="Facebook"
-          >
+          <a href="https://www.facebook.com/VendemosTuCoche" target="_blank" aria-label="Facebook">
             <img src="./images/icon/Facebook.svg" alt="Facebook" >
           </a>
-          <a
-            href="https://www.twitter.com/VendemosTuCoche"
-            target="_blank"
-            aria-label="Twitter"
-          >
+          <a href="https://www.twitter.com/VendemosTuCoche" target="_blank" aria-label="Twitter">
             <img src="./images/icon/X.svg" alt="Twitter" >
           </a>
-          <a
-            href="https://www.instagram.com/VendemosTuCoche"
-            target="_blank"
-            aria-label="Instagram"
-          >
+          <a href="https://www.instagram.com/VendemosTuCoche" target="_blank" aria-label="Instagram">
             <img src="./images/icon/Instagram.svg" alt="Insta" >
           </a>
-          <a
-            href="https://www.linkedin.com/company/VendemosTuCoche"
-            target="_blank"
-            aria-label="LinkedIn"
-          >
+          <a href="https://www.linkedin.com/company/VendemosTuCoche" target="_blank" aria-label="LinkedIn">
             <img src="./images/icon/Linkedin.svg" alt="Linkedin" >
           </a>
         </section>
 
         <section class="footer-info">
-          <h4>© 2025 VendemosTuCoche</h4>
+          <h2>© 2025 VendemosTuCoche</h2>
           <p>Transacciones seguras, rápidas y sin estrés.</p>
           <nav class="footer-nav">
             <a href="aviso-legal.html">Aviso legal</a>
