Mejor Accesibilidad (botones negros)

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 
           <article title="Usuario" class="testimonio">
             <div class="contenedor-perfil">
-              <img class="perfil" src="./images/usuarios/Laura.png" alt="laia2">
+              <img class="perfil" src="./images/usuarios/Laura.png" alt="laia">
               <h2 class="autor">
                 Laura V.<br >
                 <span class="azul-claro">TALLER ASOCIADO</span>
