--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
         </a>
       </div>
     </header>
-    <!-- 🌟 Sección principal o “hero” -->
+
+    <!-- Sección principal o “hero” -->
     <section id="inicio" class="hero">
       <img src="./images/empresa/logoCocheDeLado-fondo.png" alt="cocheEmpresa">
       <div id="intro">
