Mejor Accesibilidad en servicios mejora final

--- a/contacto.html
+++ b/contacto.html
@@ -19,7 +19,7 @@
   <body id="body-contacto">
 
     <header>
-      <a href="./index.html">
+      <a href="condiciones">
         <div id="contenedor-logo">
           <img
             src="./images/empresa/logo.png" alt="Logo_empresa"  width="100" id="logo">
