--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <header>
-      <a href="./index.html">
+      <a href="condiciones">
         <div id="contenedor-logo">
           <img
             src="./images/empresa/logo.png" alt="Logo_empresa"  width="100" id="logo">
