--- a/mantenimiento.html
+++ b/mantenimiento.html
@@ -13,11 +13,7 @@
     >
     <!-- Estilos e impresión -->
     <title>VendemosTuCoche - Mantenimiento</title>
-    <link
-      rel="icon"
-      href="./images/empresa/favicon.ico"
-      type="image/x-icon"
-    >
+    <link rel="icon" href="./images/empresa/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/main.css" >
     <link rel="stylesheet" href="css/secciones/index.css" >
     <link rel="stylesheet" href="css/secciones/mantenimiento.css" >
@@ -25,22 +21,22 @@
   </head>
 
   <body>
+
     <header>
-      <a href="./index.html">
+      <a href="condiciones">
         <div id="contenedor-logo">
           <img
-            src="./images/empresa/logo.png"
-            alt="Logo"
-            width="100"
-            id="logo"
-          >
+            src="./images/empresa/logo.png" alt="Logo_empresa"  width="100" id="logo">
         </div>
       </a>
 
       <!-- Checkbox + label para menú móvil (checkbox-hack) -->
-      <input type="checkbox" id="menu-toggle" aria-label="Abrir menú" >
-      <label for="menu-toggle" class="hamburger" aria-hidden="true">
-        <span></span><span></span><span></span>
+      <input type="checkbox" id="menu-toggle">
+      <label for="menu-toggle" class="hamburger">
+        <span class="sr-only">Abrir menú de navegación</span>
+        <span></span>
+        <span></span>
+        <span></span>
       </label>
 
       <nav class="menu-principal">
@@ -51,12 +47,11 @@
           <li><a href="./contacto.html" class="link">CONTACTO</a></li>
         </ul>
       </nav>
-
       <div id="usuario">
-        <a href="./mantenimiento.html" class="link"
-          ><img src="./images/usuarios/Login.png" class="perfil" alt="Perfil"
-        ></a>
-        <a href="./mantenimiento.html" class="link">INICIAR SESIÓN</a>
+        <a href="./login.html" class="link-usuario">
+          <img src="./images/usuarios/Login.png" alt="" class="perfil">
+          <span>INICIAR SESIÓN</span>
+        </a>
       </div>
     </header>
 
