--- a/servicios.html
+++ b/servicios.html
@@ -22,7 +22,7 @@
   </head>
   <body id="servicios-body">
     <header>
-      <a href="./index.html">
+      <a href="condiciones">
         <div id="contenedor-logo">
           <img
             src="./images/empresa/logo.png" alt="Logo_empresa"  width="100" id="logo">
