Mejor Accesibilidad en contacto

--- a/contacto.html
+++ b/contacto.html
@@ -172,7 +172,7 @@
               <a
                 href="https://www.google.com/maps/dir/?api=1&destination=Av.+de+la+Empresa+12+Madrid"
                 target="_blank"
-                class="boton-limpiar"
+                class="boton-como-llegar"
                 >Cómo llegar</a
               >
             </div>
@@ -182,7 +182,7 @@
         </div>
       </section>
     </main>
-    <!-- ⚙️ Pie de página -->
+    <!-- Pie de página -->
     <footer class="footer">
       <div class="footer-contenido">
         <section class="footer-soporte">
