Mejor Accesibilidad en contacto

--- a/contacto.html
+++ b/contacto.html
@@ -19,10 +19,9 @@
   <body id="body-contacto">
 
     <header>
-      <a href="condiciones">
+      <a href="condiciones" title="condiciones">
         <div id="contenedor-logo">
-          <img
-            src="./images/empresa/logo.png" alt="Logo_empresa"  width="100" id="logo">
+          <img src="./images/empresa/logo.png" alt="Logo_empresa"  width="100" id="logo">
         </div>
       </a>
 
@@ -45,7 +44,7 @@
       </nav>
       <div id="usuario">
         <a href="./login.html" class="link-usuario">
-          <img src="./images/usuarios/Login.png" alt="" class="perfil">
+          <img src="./images/usuarios/Login.png" alt="loginImage" class="perfil">
           <span>INICIAR SESIÓN</span>
         </a>
       </div>
