--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <header>
-      <a href="condiciones">
+      <a href="condiciones" title="condiciones">
         <div id="contenedor-logo">
           <img
             src="./images/empresa/logo.png" alt="Logo_empresa"  width="100" id="logo">
@@ -47,7 +47,7 @@
       </nav>
       <div id="usuario">
         <a href="./login.html" class="link-usuario">
-          <img src="./images/usuarios/Login.png" alt="" class="perfil">
+          <img src="./images/usuarios/Login.png" alt="loginImage" class="perfil">
           <span>INICIAR SESIÓN</span>
         </a>
       </div>
