--- a/servicios.html
+++ b/servicios.html
@@ -22,10 +22,9 @@
   </head>
   <body id="servicios-body">
     <header>
-      <a href="condiciones">
+      <a href="condiciones" title="condiciones">
         <div id="contenedor-logo">
-          <img
-            src="./images/empresa/logo.png" alt="Logo_empresa"  width="100" id="logo">
+          <img src="./images/empresa/logo.png" alt="Logo_empresa"  width="100" id="logo">
         </div>
       </a>
 
@@ -48,17 +47,12 @@
       </nav>
       <div id="usuario">
         <a href="./login.html" class="link-usuario">
-          <img src="./images/usuarios/Login.png" alt="" class="perfil">
+          <img src="./images/usuarios/Login.png" alt="loginImage" class="perfil">
           <span>INICIAR SESIÓN</span>
         </a>
       </div>
     </header>
 
-
-
-
-
-    ---------------------------------------
     <aside class="aside-servicios">
       <nav class="nav-secundaria">
         <h3>Explora nuestros servicios</h3>
