--- a/mantenimiento.html
+++ b/mantenimiento.html
@@ -23,7 +23,7 @@
   <body>
 
     <header>
-      <a href="condiciones">
+      <a href="condiciones" title="condiciones">
         <div id="contenedor-logo">
           <img
             src="./images/empresa/logo.png" alt="Logo_empresa"  width="100" id="logo">
@@ -49,7 +49,7 @@
       </nav>
       <div id="usuario">
         <a href="./login.html" class="link-usuario">
-          <img src="./images/usuarios/Login.png" alt="" class="perfil">
+          <img src="./images/usuarios/Login.png" alt="loginImage" class="perfil">
           <span>INICIAR SESIÓN</span>
         </a>
       </div>
@@ -71,11 +71,11 @@
       </div>
     </main>
 
-    <!-- ⚙️ Pie de página -->
+    <!-- Pie de página -->
     <footer class="footer">
       <div class="footer-contenido">
         <section class="footer-soporte">
-          <h3>¿Necesitas ayuda?</h3>
+          <h2>¿Necesitas ayuda?</h2>
           <p>
             Estamos aquí para resolver tus dudas y acompañarte durante todo el
             proceso.
