--- a/mantenimiento.html
+++ b/mantenimiento.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <!-- ENLACE DE SALTO -->
-  <a href="#inicio" class="skip-link">Saltar al contenido principal</a>
+  <a href="#inicio" class="skip-link" role="link" aria-label="Saltar al contenido principal">Saltar al contenido principal</a>
 
   <head>
     <meta charset="UTF-8">
@@ -22,117 +22,125 @@
 
   <body>
 
-    <header>
-      <a href="condiciones" title="condiciones">
+    <header role="banner" aria-label="Cabecera del sitio">
+      <a href="condiciones" title="condiciones" aria-label="Ir a condiciones">
         <div id="contenedor-logo">
           <img
-            src="./images/empresa/logo.png" alt="Logo_empresa"  width="100" id="logo">
+            src="./images/empresa/logo.png" alt="Logo_empresa" width="100" id="logo" role="img" aria-label="Logotipo de VendemosTuCoche">
         </div>
       </a>
 
       <!-- Checkbox + label para menú móvil (checkbox-hack) -->
-      <input type="checkbox" id="menu-toggle">
-      <label for="menu-toggle" class="hamburger">
+      <input
+        type="checkbox"
+        id="menu-toggle"
+        aria-controls="menu-principal"
+        aria-expanded="false"
+        aria-label="Mostrar u ocultar menú de navegación"
+      >
+      <label for="menu-toggle" class="hamburger" role="button" aria-controls="menu-principal" aria-label="Botón abrir/cerrar menú de navegación" tabindex="0">
         <span class="sr-only">Abrir menú de navegación</span>
         <span></span>
         <span></span>
         <span></span>
       </label>
 
-      <nav class="menu-principal">
-        <ul>
-          <li><a href="./index.html" class="link">INICIO</a></li>
-          <li><a href="./servicios.html" class="link">SERVICIOS</a></li>
-          <li><a href="#" class="link">OPINIONES</a></li>
-          <li><a href="./contacto.html" class="link">CONTACTO</a></li>
+      <nav id="menu-principal" class="menu-principal" role="navigation" aria-label="Menú principal" aria-hidden="true">
+        <ul role="list">
+          <li role="listitem"><a href="./index.html" class="link">INICIO</a></li>
+          <li role="listitem"><a href="./servicios.html" class="link">SERVICIOS</a></li>
+          <li role="listitem"><a href="#" class="link">OPINIONES</a></li>
+          <li role="listitem"><a href="./contacto.html" class="link">CONTACTO</a></li>
         </ul>
       </nav>
-      <div id="usuario">
-        <a href="./login.html" class="link-usuario">
-          <img src="./images/usuarios/Login.png" alt="loginImage" class="perfil">
+      <div id="usuario" role="navigation" aria-label="Área de usuario" aria-live="polite">
+        <a href="./login.html" class="link-usuario" aria-label="Iniciar sesión, abre la página de inicio de sesión">
+          <img src="./images/usuarios/Login.png" alt="" class="perfil" aria-hidden="true">
           <span>INICIAR SESIÓN</span>
         </a>
       </div>
     </header>
 
-    <main id="inicio">
-      <div class="contenedor-mantenimiento">
-        <img src="./images/web/aviso.png" alt="Mantenimiento" >
-        <h1>Estamos en mantenimiento</h1>
+    <main id="inicio" role="main" aria-labelledby="mantenimiento-heading">
+      <div class="contenedor-mantenimiento" role="region" aria-label="Página de mantenimiento">
+        <img src="./images/web/aviso.png" alt="Mantenimiento" role="img" aria-label="Icono de mantenimiento">
+        <h1 id="mantenimiento-heading">Estamos en mantenimiento</h1>
         <p>
           Estamos realizando mejoras para ofrecerte una experiencia aún mejor.
           <br >
           Volveremos a estar disponibles muy pronto.
         </p>
 
-        <div class="reloj" id="reloj"></div>
+        <div class="reloj" id="reloj" role="status" aria-live="polite" aria-atomic="true"></div>
 
-        <a href="./index.html" class="boton-volver">Volver al inicio</a>
+        <a href="./index.html" class="boton-volver" role="link" aria-label="Volver al inicio">Volver al inicio</a>
       </div>
     </main>
 
     <!-- Pie de página -->
-    <footer class="footer">
+    <footer class="footer" role="contentinfo" aria-label="Pie de página con información de contacto y enlaces legales">
       <div class="footer-contenido">
-        <section class="footer-soporte">
-          <h2>¿Necesitas ayuda?</h2>
+        <section class="footer-soporte" role="region" aria-labelledby="footer-soporte-heading">
+          <h2 id="footer-soporte-heading">¿Necesitas ayuda?</h2>
           <p>
             Estamos aquí para resolver tus dudas y acompañarte durante todo el
             proceso.
           </p>
 
-          <ul class="footer-contacto">
-            <li>
+          <ul class="footer-contacto" role="list">
+            <li role="listitem">
               📞 <strong>Teléfono / WhatsApp:</strong>
               <a href="tel:+34900000000">+34 900 000 000</a>
             </li>
-            <li>
+            <li role="listitem">
               📧 <strong>Email:</strong>
-              <a href="mailto:soporte@vendemostucoche.com"
-                >soporte@vendemostucoche.com</a
-              >
+              <a href="mailto:soporte@vendemostucoche.com">soporte@vendemostucoche.com</a>
             </li>
-            <li>🕓 <strong>Horario:</strong> Lunes a viernes, 9:00 – 18:00</li>
+            <li role="listitem">🕓 <strong>Horario:</strong> Lunes a viernes, 9:00 – 18:00</li>
           </ul>
         </section>
 
         <!-- Redes sociales -->
-        <section title="Redes Sociales" class="footer-redes">
-          <h2>Nuestras Redes sociales</h2>
+        <section title="Redes Sociales" class="footer-redes" role="region" aria-labelledby="redes-heading">
+          <h2 id="redes-heading">Nuestras Redes sociales</h2>
           <a
             href="https://www.facebook.com/VendemosTuCoche"
             target="_blank"
             aria-label="Facebook"
+            rel="noopener noreferrer"
           >
-            <img src="./images/icon/Facebook.svg" alt="Facebook" >
+            <img src="./images/icon/Facebook.svg" alt="Facebook" role="img" aria-hidden="true">
           </a>
           <a
             href="https://www.twitter.com/VendemosTuCoche"
             target="_blank"
             aria-label="Twitter"
+            rel="noopener noreferrer"
           >
-            <img src="./images/icon/X.svg" alt="Twitter" >
+            <img src="./images/icon/X.svg" alt="Twitter" role="img" aria-hidden="true">
           </a>
           <a
             href="https://www.instagram.com/VendemosTuCoche"
             target="_blank"
             aria-label="Instagram"
+            rel="noopener noreferrer"
           >
-            <img src="./images/icon/Instagram.svg" alt="Insta" >
+            <img src="./images/icon/Instagram.svg" alt="Insta" role="img" aria-hidden="true">
           </a>
           <a
             href="https://www.linkedin.com/company/VendemosTuCoche"
             target="_blank"
             aria-label="LinkedIn"
+            rel="noopener noreferrer"
           >
-            <img src="./images/icon/Linkedin.svg" alt="Linkedin" >
+            <img src="./images/icon/Linkedin.svg" alt="Linkedin" role="img" aria-hidden="true">
           </a>
         </section>
 
-        <section class="footer-info">
-          <h2>© 2025 VendemosTuCoche</h2>
+        <section class="footer-info" role="region" aria-labelledby="footer-info-heading">
+          <h2 id="footer-info-heading">© 2025 VendemosTuCoche</h2>
           <p>Transacciones seguras, rápidas y sin estrés.</p>
-          <nav class="footer-nav">
+          <nav class="footer-nav" role="navigation" aria-label="Enlaces legales">
             <a href="aviso-legal.html">Aviso legal</a>
             <a href="privacidad.html">Privacidad</a>
             <a href="cookies.html">Cookies</a>
